--- a/API-ecommerce/style.css
+++ b/API-ecommerce/style.css
@@ -15,7 +15,7 @@ h1{
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 20px;
-    background: linear-gradient(to left, #F9DC5C,#E9CE2C);
+    background: linear-gradient(to left, #5cecf9,#e62ce9);
     padding: 20px;
 }
 
@@ -30,7 +30,7 @@ h1{
     border-radius: 10px;
     gap: 10px;
     cursor: pointer;
-    background: linear-gradient(to bottom, #A4C3B2,white);
+    background: linear-gradient(to bottom, #cf794a,white);
 }
 .products:hover{
     box-shadow: 5px 5px 10px black;
